Revert "Fixes #1306 Java PermSize command line flag removed in Java 8"
This reverts commit 0041766b1fafe2823aaefd38e2030a1c3db40778.