@@ -83,7 +83,7 @@ fi
 #Start ZAP
 
 if [ "$OS" = "Darwin" ]; then
-  exec ../PlugIns/jre*/Contents/Home/bin/java ${JMEM} -Xdock:icon="../Resources/ZAP.icns" -jar "${BASEDIR}/zap-dev.jar" "$@"
+  exec ../PlugIns/jre*/Contents/Home/bin/java ${JMEM} -XX:PermSize=256M -Xdock:icon="../Resources/ZAP.icns" -jar "${BASEDIR}/zap-dev.jar" "$@"
 else
-  exec java ${JMEM} -jar "${BASEDIR}/zap-dev.jar" "$@"
+  exec java ${JMEM} -XX:PermSize=256M -jar "${BASEDIR}/zap-dev.jar" "$@"
 fi
